<resources>
    <string name="app_name">Task_Chapter4_Badhrul Salman</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_page">next page</string>
    <string name="price">Harganya</string>
    <string name="title">Judul</string>
    <string name="id">Id</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="register">REGISTER</string>
    <string name="add_data">add data</string>
    <string name="success">Registrasi Berhasil</string>
</resources>